Header icon not showing fixed. Padding added to partnerships component

--- a/front-end/src/components/Header/styles.css
+++ b/front-end/src/components/Header/styles.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.5em;
+  padding: 0.5em 1em;
   background-color: var(--g1); 
   height: 8vh;
   width: auto;
