--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -52,6 +52,7 @@ a {
   width: 100vw;
   height: auto;
   text-align: center;
+  width: auto;
 }
 
 /*
