--- a/front-end/src/scenes/Landing/components/Partnerships/styles.css
+++ b/front-end/src/scenes/Landing/components/Partnerships/styles.css
@@ -1,3 +1,3 @@
 .partnerships {
-  padding: 2em 0;
+  padding: 2em 1em;
 }
